# mcp_ssh

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  hosts.example.yaml  manage_hosts.py  pyproject.toml  requirements.txt
docs/: portainer-deployment.md
docs/bugs/: 2026-06-19-mcp-ssh-bugs-design.md
docs/superpowers/plans/: 2026-06-23-config-hot-reload.md
docs/superpowers/specs/: 2026-06-23-config-hot-reload-design.md
mcp_ssh/: __init__.py  audit.py  config.py  connection.py  errors.py  models.py  parsers.py  safety.py  server.py  session_manager.py  shell_session.py
tests/: conftest.py  test_audit.py  test_config.py  test_config_reload.py  test_connection_exec.py  test_connection_kwargs.py  test_manage_hosts.py  test_models.py  test_parsers.py  test_safety.py  test_server_integration.py  test_server_tools.py  test_session_manager.py  test_shell_session.py  test_smoke.py
